trunk/Source/include/ODEImport.hpp



typedef float TdReal;


typedef System::StaticArray<float, 4> TdVector3;


typedef TdVector3 *PdVector3;


typedef System::StaticArray<float, 4> TdVector4;


typedef System::StaticArray<float, 12> TdMatrix3;


typedef TdMatrix3 *PdMatrix3;


typedef TdVector4 TdQuaternion;


typedef TdVector4 *PdQuaternion;


struct DECLSPEC_DRECORD TdMass
{
public:
	float mass;
	TdVector4 c;
	TdMatrix3 I;
};



typedef TdMass *PdMass;



struct TdxGeom;

typedef TdxGeom *PdxGeom;


struct TdxWorld;

typedef TdxWorld *PdxWorld;



struct TdxBody;

typedef TdxBody *PdxBody;

typedef TdxJoint *PdxJoint;


typedef PdxJoint TdJointID;


struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject BaseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};

struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};


typedef System::StaticArray<float, 65536> TdRealHugeArray;


typedef TdRealHugeArray *PdRealHugeArray;


typedef System::StaticArray<int, 65536> TdIntegerArray;


typedef TdIntegerArray *PdIntegerArray;


typedef System::StaticArray<System::StaticArray<float, 4>, 65536> TdVector3Array;


typedef TdVector3Array *PdVector3Array;



struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *Body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};



class DELPHICLASS TGeomList;



typedef int TJointParams;


//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode_single.dll"

extern PACKAGE int dParamLoStop;

extern PACKAGE int dParamHiStop;

extern PACKAGE int dParamVel;

extern PACKAGE int dParamFMax;

extern PACKAGE int dParamFudgeFactor;

extern PACKAGE int dParamBounce;

extern PACKAGE int dParamCFM;

extern PACKAGE int dParamStopERP;

extern PACKAGE int dParamStopCFM;

extern PACKAGE int dParamSuspensionERP;

extern PACKAGE int dParamSuspensionCFM;

extern PACKAGE int dParamLoStop2;

extern PACKAGE int dParamHiStop2;

extern PACKAGE int dParamVel2;

extern PACKAGE int dParamFMax2;

extern PACKAGE int dParamFudgeFactor2;

extern PACKAGE int dParamBounce2;

extern PACKAGE int dParamCFM2;

extern PACKAGE int dParamStopERP2;

extern PACKAGE int dParamStopCFM2;

extern PACKAGE int dParamSuspensionERP2;

extern PACKAGE int dParamSuspensionCFM2;

extern PACKAGE int dParamLoStop3;

extern PACKAGE int dParamHiStop3;

extern PACKAGE int dParamVel3;

extern PACKAGE int dParamFMax3;

extern PACKAGE int dParamFudgeFactor3;

extern PACKAGE int dParamBounce3;

extern PACKAGE int dParamCFM3;

extern PACKAGE int dParamStopERP3;

extern PACKAGE int dParamStopCFM3;

extern PACKAGE int dParamSuspensionERP3;

extern PACKAGE int dParamSuspensionCFM3;

extern PACKAGE int dParamGroup;

extern "C" void __cdecl dCloseODE(void);

extern "C" PdxWorld __cdecl dWorldCreate(void);

extern "C" void __cdecl dWorldDestroy(const PdxWorld World);

extern "C" float __cdecl dWorldGetCFM(const PdxWorld World);

extern "C" float __cdecl dWorldGetERP(const PdxWorld World);

extern "C" void __cdecl dWorldGetGravity(const PdxWorld World, float *gravity);

extern "C" void __cdecl dWorldSetGravity(const PdxWorld World, const float x, const float y, const float z);

extern "C" void __cdecl dWorldImpulseToForce(const PdxWorld World, const float stepsize, const float ix, const float iy, const float iz, float *force);

extern "C" void __cdecl dWorldSetCFM(const PdxWorld World, float cfm);

extern "C" void __cdecl dWorldSetERP(const PdxWorld World, float erp);

extern "C" void __cdecl dWorldStep(const PdxWorld World, const float stepsize);

extern "C" void __cdecl dWorldStepFast1(const PdxWorld World, const float stepsize, const int iterations);

extern "C" void __cdecl dWorldSetAutoEnableDepthSF1(const PdxWorld World, int autodepth);

extern "C" int __cdecl dWorldGetAutoEnableDepthSF1(const PdxWorld World);

extern "C" void __cdecl dBodyAddForce(const PdxBody Body, const float fx, const float fy, const float fz);

extern "C" void __cdecl dBodyAddForceAtPos(const PdxBody Body, const float fx, const float fy, const float fz, const float px, const float py, const float pz);

extern "C" void __cdecl dBodyAddForceAtRelPos(const PdxBody Body, const float fx, const float fy, const float fz, const float px, const float py, const float pz);

extern "C" void __cdecl dBodyAddRelForce(const PdxBody Body, const float fx, const float fy, const float fz);

extern "C" void __cdecl dBodyAddRelForceAtPos(const PdxBody Body, const float fx, const float fy, const float fz, const float px, const float py, const float pz);

extern "C" void __cdecl dBodyAddRelForceAtRelPos(const PdxBody Body, const float fx, const float fy, const float fz, const float px, const float py, const float pz);

extern "C" void __cdecl dBodyAddRelTorque(const PdxBody Body, const float fx, const float fy, const float fz);

extern "C" void __cdecl dBodyAddTorque(const PdxBody Body, const float fx, const float fy, const float fz);

extern "C" PdxBody __cdecl dBodyCreate(const PdxWorld World);

extern "C" void __cdecl dBodyDestroy(const PdxBody Body);

extern "C" void __cdecl dBodyDisable(const PdxBody Body);

extern "C" void __cdecl dBodyEnable(const PdxBody Body);

extern "C" PdVector3 __cdecl dBodyGetAngularVel(const PdxBody Body);

extern "C" void __cdecl dBodyGetFiniteRotationAxis(const PdxBody Body, float *result);

extern "C" int __cdecl dBodyGetFiniteRotationMode(const PdxBody Body);

extern "C" PdVector3 __cdecl dBodyGetForce(const PdxBody Body);

extern "C" int __cdecl dBodyGetGravityMode(const PdxBody Body);

extern "C" PdxJoint __cdecl dBodyGetJoint(const PdxBody Body, const int index);

extern "C" PdVector3 __cdecl dBodyGetLinearVel(const PdxBody Body);

extern "C" void __cdecl dBodyGetMass(const PdxBody Body, TdMass &mass);

extern "C" int __cdecl dBodyGetNumJoints(const PdxBody Body);

extern "C" void __cdecl dBodyGetPointVel(const PdxBody Body, const float px, const float py, const float pz, float *result);

extern "C" void __cdecl dBodyGetPosRelPoint(const PdxBody Body, const float px, const float py, const float pz, float *result);

extern "C" PdVector3 __cdecl dBodyGetPosition(const PdxBody Body);

extern "C" PdQuaternion __cdecl dBodyGetQuaternion(const PdxBody Body);

extern "C" void __cdecl dBodyGetRelPointPos(const PdxBody Body, const float px, const float py, const float pz, float *result);

extern "C" void __cdecl dBodyGetRelPointVel(const PdxBody Body, const float px, const float py, const float pz, float *result);

extern "C" PdMatrix3 __cdecl dBodyGetRotation(const PdxBody Body);

extern "C" PdVector3 __cdecl dBodyGetTorque(const PdxBody Body);

extern "C" int __cdecl dBodyIsEnabled(const PdxBody Body);

extern "C" void __cdecl dBodySetAngularVel(const PdxBody Body, const float x, const float y, const float z);

extern "C" void __cdecl dBodySetFiniteRotationAxis(const PdxBody Body, const float x, const float y, const float z);

extern "C" void __cdecl dBodySetFiniteRotationMode(const PdxBody Body, const int mode);

extern "C" void __cdecl dBodySetForce(const PdxBody Body, const float x, const float y, const float z);

extern "C" void __cdecl dBodySetGravityMode(const PdxBody Body, const int mode);

extern "C" void __cdecl dBodySetLinearVel(const PdxBody Body, const float x, const float y, const float z);

extern "C" void __cdecl dBodySetMass(const PdxBody Body, const PdMass mass);

extern "C" void __cdecl dBodySetPosition(const PdxBody Body, const float x, const float y, const float z);

extern "C" void __cdecl dBodySetQuaternion(const PdxBody Body, float const *q);

extern "C" void __cdecl dBodySetRotation(const PdxBody Body, float const *R);

extern "C" void __cdecl dBodySetTorque(const PdxBody Body, const float x, const float y, const float z);

extern "C" void __cdecl dBodyVectorFromWorld(const PdxBody Body, const float px, const float py, const float pz, float *result);

extern "C" void __cdecl dBodyVectorToWorld(const PdxBody Body, const float px, const float py, const float pz, float *result);

extern "C" void __cdecl dBodySetData(const PdxBody Body, void * data);

extern "C" void * __cdecl dBodyGetData(const PdxBody Body);

extern PACKAGE int dSphereClass;

extern PACKAGE int dBoxClass;

extern PACKAGE int dPlaneClass;

extern PACKAGE int dGeomTransformClass;